--- a/static/pangolin/css/universal.css
+++ b/static/pangolin/css/universal.css
@@ -48,7 +48,7 @@ Table of contents
 /* Fonts */
 @import "https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900|Roboto+Mono:100,400|Caveat";
 /* Plugins */
-@import url(../vegas/vegas.min.css);
+@import url(../css/vegas/vegas.min.css);
 @import url(ionicons.min.css);
 @import url(font-awesome.min.css);
 @import url(animate.min.css);
