--- a/templates/main.html
+++ b/templates/main.html
@@ -653,7 +653,7 @@ That's what we do with our competitors.</p>
     <script src="{% static 'pangolin/js/wow.min.js' %}"></script>
         <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/-->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3E86i8mx1BZDlAaLcknh_mWl4F70i4os"></script>
-        <script src="{% static 'pangolin/s/map.js' %}"></script>
+        <script src="{% static 'pangolin/js/map.js' %}"></script>
     <!-- Custom Theme JavaScript-->
     <script src="{% static 'pangolin/js/universal.js' %}"></script>
 <!--[if lt IE 9]>
