--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -26,9 +26,7 @@
             {# <li><a href="#0" class="placeholder">Placeholder</a></li> #}
           {# </ul> #}
       <li><a href="#0">Compare</a></li> 
-      <div class="buy">
-      <li><a href="#0">Buy</a></li>
-      </div>
+      <li class="buy"><a href="#0">Buy</a></li>
     </ul>
   </nav> <!-- .cd-secondary-nav -->
 </header> <!-- .cd-auto-hide-header -->
