--- a/product/templates/products.html
+++ b/product/templates/products.html
@@ -21,8 +21,11 @@
       {# {% endfor %} #}
             {# <li><a href="#0" class="placeholder">Placeholder</a></li> #}
           {# </ul> #}
+          {# <li class="buy"><a href="#0">Buy</a></li> #}
       <li><a href="#0">Compare</a></li> 
-      <li><a class="active" href="#0">Buy</a></li>
+       
+      <li class="buy"><a href="#0">Buy</a></li>
+      
     </ul>
   </nav> <!-- .cd-secondary-nav -->
 </header> <!-- .cd-auto-hide-header -->
