--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,16 @@
     
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" class="top">	
+
+
+{% if menu == 1 %}
   
     <header class="cd-auto-hide-header">
-  <div class="logo"><a href="/"><img src="{% static 'pangolin/img/pangolin_logo_small.png' %}" alt="Logo"></a></div>
+
+ 
+  <div class="logo"><a href="/menu/{{ menu }}/"><img src="{% static 'pangolin/img/pangolin_logo_small.png' %}" alt="Logo"></a></div>
+
+ 
 
   <nav class="cd-primary-nav">
     <a href="#cd-navigation" class="nav-trigger">
@@ -35,13 +42,234 @@
     </a> <!-- .nav-trigger -->
 
     <ul id="cd-navigation">
-      <li><a href="/">Products</a></li>
-      <li><a href="/support/">Support</a></li>
-      <li><a href="/support/">Educations</a></li>
-      <li><a href="/news/">News</a></li>
-      <li><a href="/contact/">Contact</a></li>
+       <li><a href="/menu/{{ menu }}/">Products</a></li>
+      <li><a href="/support/supports/{{ menu }}/">Support</a></li>
+      {# <li><a href="/support/">Educations</a></li> #}
+      {# <li><a href="/news/">News</a></li> #}
+      <li><a href="/contact/{{ menu }}/">Contact</a></li>
+  
+      <li><a href="/menu/{{1}}/">menu1</a></li>
+      <li><a href="/menu/{{2}}/">menu2</a></li>
+      <li><a href="/menu/{{3}}/">menu3</a></li>
     </ul>
   </nav> <!-- .cd-primary-nav -->
+
+   <nav class="cd-secondary-nav">
+    <ul>
+
+      {% if products %}
+      {% for product in products %}
+      {% if product == current_product %}
+      <li><a class="active" href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">{{ product.product_title }}</a></li>
+      {% else %}
+      <li><a href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">{{ product.product_title }}</a></li>
+      {% endif %}
+      {% endfor %}
+      <li><a href="#0">Accessories</a></li> 
+      <li><a href="#0">Compare</a></li> 
+      <li class="buy"><a href="#0">Buy</a></li>
+
+      {% elif supports %}
+      {% for support in supports %}
+
+      <li><a href="/support/support/{{support.id}}/{{ menu }}/">{{ support.title }}</a></li>
+
+      {% endfor %}
+
+      {% elif categories %}
+      {% for category in categories %}
+
+      <li><a href="/products/{{category.id}}/{{ menu }}/">{{ category.name }}</a></li>
+
+      {% endfor %}
+
+      
+       {% endif %}
+
+
+      
+      
+
+      {# {% endif %} #}
+    </ul>
+  </nav> <!-- .cd-secondary-nav -->
+
+  </header> <!-- .cd-auto-hide-header -->
+{% endif %}
+
+
+
+
+{% if menu == 3 %}
+
+<header class="cd-auto-hide-header">
+
+<div class="logo"><a href="/"><img src="{% static 'pangolin/img/pangolin_logo_small.png' %}" alt="Logo"></a></div>
+
+  <nav class="cd-primary-nav">
+    <a href="#cd-navigation" class="nav-trigger">
+      <span>
+        <em aria-hidden="true"></em>
+        {# Menu #}
+      </span>
+    </a> <!-- .nav-trigger -->
+
+    
+
+    <ul id="cd-navigation">
+      {# <li><a href="/menu/{{ menu }}/"><img src="{% static 'pangolin/img/pangolin_logo_small_sq.png' %}" alt="Logo"></a></li> #}
+
+      {# {% if categories %}  #}
+       {% for category in categories %}
+
+      <li><a href="/products/{{category.id}}/{{ menu }}/">{{ category.name }}</a></li>
+
+      {% endfor %}
+      {# {% endif %}  #}
+      {# <li><a href="/">Products</a></li> #}
+      {# <li><a href="/support/">Support</a></li> #}
+      {# <li><a href="/support/">Educations</a></li> #}
+      {# <li><a href="/news/">News</a></li> #}
+      {# <li><a href="/contact/">Contact</a></li> #}
+      <li><a href="/support/supports/{{ menu }}/">Support</a></li>
+  
+      <li><a href="/menu/{{1}}/">menu1</a></li>
+      <li><a href="/menu/{{2}}/">menu2</a></li>
+      <li><a href="/menu/{{3}}/">menu3</a></li>
+    </ul>
+  </nav> <!-- .cd-primary-nav -->
+
+  
+{% if products %}
+   <nav class="cd-secondary-nav">
+    <ul>
+
+      {% for product in products %}
+      {% if product == current_product %}
+      <li><a class="active" href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">{{ product.product_title }}</a></li>
+      {% else %}
+      <li><a href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">{{ product.product_title }}</a></li>
+      {% endif %}
+      {% endfor %}
+      <li><a href="#0">Accessories</a></li> 
+
+      <li><a href="#0">Compare</a></li> 
+      <li class="buy"><a href="#0">Buy</a></li>
+       
+    </ul>
+  </nav> <!-- .cd-secondary-nav -->
+
+{% elif supports %}
+   <nav class="cd-secondary-nav">
+    <ul>
+
+      {% for support in supports %}
+
+      <li><a href="/support/support/{{support.id}}/{{ menu }}/">{{ support.title }}</a></li>
+
+      {% endfor %}
+       
+    </ul>
+  </nav> <!-- .cd-secondary-nav -->
+{% endif %}
+
+
+
+   
+  </header> <!-- .cd-auto-hide-header -->
+{% endif %}
+
+
+{% if menu == 2 %}
+
+<header class="cd-auto-hide-header">
+
+<div class="logo"><a href="/menu/{{ menu }}/"><img src="{% static 'pangolin/img/pangolin_logo_small.png' %}" alt="Logo"></a></div>
+
+  <nav class="cd-primary1-nav">
+    <a href="#cd-navigation" class="nav-trigger">
+      <span>
+        <em aria-hidden="true"></em>
+        {# Menu #}
+      </span>
+    </a> <!-- .nav-trigger -->
+
+    <ul id="cd-navigation">
+      {# <li><a href="/menu/{{ menu }}/"><img src="{% static 'pangolin/img/pangolin_logo_small_sq.png' %}" alt="Logo"></a></li> #}
+
+      {# {% if categories %}  #}
+       {% for category in categories %}
+
+      <li><a href="/products/{{category.id}}/{{ menu }}/">{{ category.name }}</a></li>
+
+      {% endfor %}
+      {# {% endif %}  #}
+      {# <li><a href="/">Products</a></li> #}
+      {# <li><a href="/support/">Support</a></li> #}
+      {# <li><a href="/support/">Educations</a></li> #}
+      {# <li><a href="/news/">News</a></li> #}
+      {# <li><a href="/contact/">Contact</a></li> #}
+      <li><a href="/support/supports/{{ menu }}/">Support</a></li>
+  
+      <li><a href="/menu/{{1}}/">menu1</a></li>
+      <li><a href="/menu/{{2}}/">menu2</a></li>
+      <li><a href="/menu/{{3}}/">menu3</a></li>
+    </ul>
+  </nav> <!-- .cd-primary-nav -->
+
+  
+{% if products %}
+   <nav class="cd-secondary-nav">
+    <ul>
+
+      {% for product in products %}
+      {% if product == current_product %}
+      <li><a class="active" href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">{{ product.product_title }}</a></li>
+      {% else %}
+      <li><a href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">{{ product.product_title }}</a></li>
+      {% endif %}
+      {% endfor %}
+      <li><a href="#0">Accessories</a></li> 
+
+      <li><a href="#0">Compare</a></li> 
+      <li class="buy"><a href="#0">Buy</a></li>
+       
+    </ul>
+  </nav> <!-- .cd-secondary-nav -->
+
+{% elif supports %}
+   <nav class="cd-secondary-nav">
+    <ul>
+
+      {% for support in supports %}
+
+      <li><a href="/support/support/{{support.id}}/{{ menu }}/">{{ support.title }}</a></li>
+
+      {% endfor %}
+       
+    </ul>
+  </nav> <!-- .cd-secondary-nav -->
+{% endif %}
+   
+
+   
+
+
+</header> <!-- .cd-auto-hide-header -->
+
+{% endif %}
+
+ 
+      {# <a href="#0" class="cd-subnav-trigger"><span>{{ current_category.name }}</span></a> #}
+
+          {# <ul> #}
+            {# <li class="go-back"><a href="#0">Menu</a></li> #}
+            {# {% for product in products %} #}
+      {# <li><a href="/products/product/{{product.id}}/">{{ product.product_title }}</a></li> #}
+      {# {% endfor %} #}
+            {# <li><a href="#0" class="placeholder">Placeholder</a></li> #}
+          {# </ul> #}
+    
 
 
     
@@ -92,7 +320,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
-            <h6>Powered By <a href="http://ForBetterWeb.com"> forbetterweb.com</a>
+            <h6>Powered By <a href="https://Pangolin.com"> Pangolin.com</a>
             </h6>
           </div>
           <div class="col-sm-3 col-sm-offset-1">
@@ -142,3 +370,4 @@
   </body>
 </html>
 
+   
