--- a/static/pangolin/auto-hiding-navigation/css/style.css
+++ b/static/pangolin/auto-hiding-navigation/css/style.css
@@ -36,7 +36,7 @@ a {
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 50px;
   background-color: #25283D;
   /*opacity: .7;*/
   /* Force Hardware Acceleration */
@@ -75,7 +75,7 @@ a {
 }
 
 .cd-auto-hide-header .logo {
-  left: 5%;
+  left:5%;
 }
 .cd-auto-hide-header .logo a, .cd-auto-hide-header .logo img {
   display: block;
@@ -164,14 +164,19 @@ a {
   height: 100%;
   padding-right: 5%;
 }
+.cd-secondary-nav ul {
+    /* reset mobile style */
+    display: block;
+    text-align: center;
+  }
+
 .cd-primary-nav > ul {
   position: absolute;
   z-index: 1002;
-  top: 60px;
+  top: 50px;
   left: 0;
   width: 100%;
    background-color: #3c3f54;
-  /*opacity: .88;*/
   display: none;
   box-shadow: 0 14px 20px rgba(0, 0, 0, 0.2);
 }
@@ -212,7 +217,7 @@ a {
   }
   .cd-primary-nav > ul li {
     display: inline-block;
-    float: left;
+    /*float: left;*/
     margin-right: 1.5em;
   }
   .cd-primary-nav > ul li:last-of-type {
@@ -242,6 +247,112 @@ a {
   }
 }
 
+
+
+
+
+.cd-primary1-nav {
+  display: inline-block;
+  float: left;
+  height: 100%;
+  padding-right: 5%;
+}
+.cd-secondary-nav ul {
+    /* reset mobile style */
+    display: block;
+    text-align: center;
+  }
+
+.cd-primary1-nav > ul {
+  position: absolute;
+  z-index: 1002;
+  top: 50px;
+  left: 0;
+  width: 100%;
+   background-color: #3c3f54;
+  display: none;
+  box-shadow: 0 14px 20px rgba(0, 0, 0, 0.2);
+}
+.cd-primary1-nav > ul a {
+  /* target primary-nav links */
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  padding-left: 5%;
+  color: #f2f2f2;
+  font-size: 1.4rem;
+  border-top: 1px solid #3c3f54;
+}
+.cd-primary1-nav > ul a:hover, .cd-primary1-nav > ul a.active {
+  color: #8F3985;
+}
+@media only screen and (min-width: 1024px) {
+  .cd-primary1-nav {
+    /* vertically align its content */
+    display: table;
+  }
+  .cd-primary1-nav > ul {
+    /* vertically align inside parent element */
+
+    display: table-cell;
+    vertical-align: middle;
+    /* reset mobile style */
+    position: relative;
+    left: 45%;
+    /*float:left;*/
+    width: auto;
+    top: 0;
+    padding: 0;
+    background-color: transparent;
+    box-shadow: none;
+  }
+  .cd-primary1-nav > ul::after {
+    clear: both;
+    content: "";
+    display: block;
+  }
+  .cd-primary1-nav > ul li {
+    display: inline-block;
+    left:-50%;
+    /*float:left;*/
+    /*float: left;*/
+    margin-right: 1.5em;
+  }
+  .cd-primary1-nav > ul li:last-of-type {
+    margin-right: 0;
+  }
+  .cd-primary1-nav > ul a {
+    /* reset mobile style */
+    height: auto;
+    line-height: normal;
+    padding: 0;
+    border: none;
+  }
+}
+
+.nav-open .cd-primary1-nav ul,
+.cd-primary1-nav ul:target {
+  /* 
+    show primary nav - mobile only 
+    :target is used to show navigation on no-js devices
+  */
+  display: block;
+}
+@media only screen and (min-width: 1024px) {
+  .nav-open .cd-primary1-nav ul,
+  .cd-primary1-nav ul:target {
+    display: table-cell;
+  }
+}
+
+
+
+
+
+
+
+
+
 /* -------------------------------- 
 
 2. Auto-Hiding Navigation - with Sub Nav
@@ -252,9 +363,9 @@ a {
   z-index: 1001;
   clear: both;
   width: 100%;
-  height: 60px;
-  background-color: #25283D;
-  opacity: .98;
+  height: 50px;
+  background-color: #383948;
+  /*opacity: 1.0;*/
   /* Force Hardware Acceleration */
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
@@ -316,7 +427,7 @@ a {
   display: block;
   color: #ffffff;
   opacity: .6;
-  line-height: 60px;
+  line-height: 50px;
   padding: 0 1em;
 }
 
@@ -325,7 +436,7 @@ a {
   color: #acedfd;
   font-weight: 600;
   opacity: .6;
-  line-height: 60px;
+  line-height: 50px;
   padding: 0 1em;
 }
 
@@ -334,7 +445,7 @@ a {
   color: #8F3985;
   font-weight: 600;
   opacity: 1;
-  line-height: 60px;
+  line-height: 50px;
   padding: 0 1em;
 }
 .cd-secondary-nav a:hover, .cd-secondary-nav a.active {
@@ -342,7 +453,7 @@ a {
 }
 @media only screen and (min-width: 1024px) {
   .cd-secondary-nav {
-    height: 60px;
+    height: 50px;
     overflow: visible;
   }
   .cd-secondary-nav ul {
@@ -358,12 +469,22 @@ a {
             flex-shrink: 1;
   }
   .cd-secondary-nav a {
-    line-height: 60px;
+    line-height: 50px;
   }
   .cd-secondary-nav a.active {
     box-shadow: inset 0 -3px #8F3985;
   }
 }
+/* ---------------------------------*/
+
+
+
+
+
+
+
+
+
 
 /* -------------------------------- 
 
