--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
 
 <header class="cd-auto-hide-header">
 
-<div class="logo"><a href="/"><img src="{% static 'pangolin/img/pangolin_logo_small.png' %}" alt="Logo"></a></div>
+<div class="logo"><a href="/menu/{{ menu }}/"><img src="{% static 'pangolin/img/pangolin_logo_small.png' %}" alt="Logo"></a></div>
 
   <nav class="cd-primary-nav">
     <a href="#cd-navigation" class="nav-trigger">
