--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.min.js"></script>
     <link rel="shortcut icon" href="{% static 'pangolin/img/favicon.png' %}">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -16,6 +20,7 @@
     <!-- Bootstrap Core CSS-->
     <link href="{% static 'pangolin/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Custom CSS-->
+    <link rel="stylesheet" type="text/css" href="{% static 'pangolin/css/styleNotes.css' %}">
     <link rel="stylesheet" href="{% static 'pangolin/auto-hiding-navigation/css/reset.css' %}"> <!-- CSS reset -->
   <link rel="stylesheet" href="{% static 'pangolin/auto-hiding-navigation/css/style.css' %}"> <!-- Resource style -->
     <link href="{% static 'pangolin/css/universal.css' %}" rel="stylesheet">
@@ -503,6 +508,7 @@
     <script src="{% static 'pangolin/js/jquery.swipebox.min.js' %}"></script>
     <script src="{% static 'pangolin/js/smoothscroll.min.js' %}"></script>
     <script src="{% static 'pangolin/js/wow.min.js' %}"></script>
+    <script type="text/babel" src="{% static 'pangolin/js/notes.js' %}"></script>
     
 <script src="{% static 'pangolin/auto-hiding-navigation/js/main.js' %}"></script> <!-- Resource jQuery -->
   
