--- a/templates/main.html
+++ b/templates/main.html
@@ -68,10 +68,13 @@
     <!-- Slider-->
     
 
-
-
     <section id="about" class="section-small">
       <div class="container">
+
+        
+
+
+
         <div class="row">
           <div class="col-lg-6">
             <h3>Who We Are</h3>
@@ -94,6 +97,10 @@ That's what we do with our competitors.</p>
             </div>
           </div>
         </div>
+
+
+<div id='mount-point'></div>
+        
       </div>
     </section>
     <!-- About Section-->
