--- a/static/pangolin/css/styleNotes.css
+++ b/static/pangolin/css/styleNotes.css
@@ -28,7 +28,7 @@ body {
     width: 200px;
     height: auto;
     float: left;
-    background-color: yellow;
+    background-color: #e9ec77
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     border-radius: 2px;
     padding: 10px;
@@ -43,7 +43,9 @@ body {
 }
 
 .note:hover {
+    background-color: #f9e1e1;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    
 }
 
 .delete-note {
@@ -57,6 +59,7 @@ body {
 
 .note:hover .delete-note {
     display: block;
+    color: black;
 }
 
 .note-editor {
