--- a/static/pangolin/css/styleNotes.css
+++ b/static/pangolin/css/styleNotes.css
@@ -124,6 +124,38 @@ body {
     outline: 0;
 }
 
+.not-button {
+    -webkit-align-self: flex-end;
+        -ms-flex-item-align: end;
+            align-self: flex-end;
+    width: 100px;
+    background-color:#44c767;
+    border-radius:28px;
+    border:1px solid #18ab29;
+    cursor:pointer;
+    color:#ffffff;
+    font-size:14px;
+    padding:8px 8px;
+    text-transform: uppercase;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #2f6627;
+}
+
+.not-button:hover {
+    // background-color:#5cbf2a;
+}
+
+.not-button:active {
+    position:relative;
+    // top:1px;
+}
+
+.not-button:focus {
+    outline: 0;
+}
+
+
+
 .notes-grid {
     margin: 0 auto;
 }
